--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ GitHub.com browser cookie asserts that you are only logged into one account
 at a time.</p>
 
 <p>My solutions for these problems are <a href="https://direnv.net/"><code>direnv</code></a> and <a href="https://support.mozilla.org/en-US/kb/containers">Firefox
-Containers</a>, respectively. These problems are straightforward
+Containers</a>, respectively. These use cases are straightforward
 applications of these technologies, so I&rsquo;m not claiming any innovation here,
 but rather it took me a long time to identify these solutions, and I hope
 this saves others some time. If you&rsquo;re not familiar with these tools, read
