--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@ arbitrary <a href="https://go.googlesource.com/proposal/+/refs/heads/master/desi
 tuple. In particular, I suspect this will cause unnecessary allocations, but I
 haven&rsquo;t tested at all.</p>
 
+<p>I&rsquo;d love feedback:</p>
+
+<ul>
+<li><a href="https://news.ycombinator.com/item?id=23556456">HackerNews</a></li>
+<li><a href="https://twitter.com/weberc2">Twitter</a></li>
+</ul>
+
 <p><a href="https://go2goplay.golang.org/p/WKouSq6mAh3">Playground</a></p>
 <pre style="background-color:#f0f0f0"><span style="color:#007020;font-weight:bold">package</span> main
 
