--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ haven&rsquo;t tested at all.</p>
 
 <ul>
 <li><a href="https://news.ycombinator.com/item?id=23556494">HackerNews</a></li>
+<li><a href="https://www.reddit.com/r/golang/comments/hb00f1/go_generics_iterator_sketch/">/r/golang</a></li>
 <li><a href="https://twitter.com/weberc2">Twitter</a></li>
 </ul>
 
