edit-fix-pink-tint-post

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ certain files and directories), booting into recovery mode, changing boot files
 (which can put your system into a boot loop, as I discovered the hard way), and
 a number of other dangerous, arcane things.</p>
 
-<p>Fortunately, I found that it&rsquo;s quite a lot safer and easier (tested on both
+<p>Fortunately, I found a sequence that is much safer and easier (tested on both
 Big Sur and Catalina on two distinct MacBook Pros):</p>
 
 
