--- a/1.html
+++ b/1.html
@@ -204,6 +204,7 @@ Karl Seguin.</p>
                         </a>
                     </li>
                     
+                    <li><a href="https://weberc2.github.io/feed.atom">Atom Feed</a></li>
                 </ul>
             </div>
             
