--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@ kernel (at least to the extent that containers provide isolation).</p>
                         </a>
                     </li>
                     
+                    <li><a href="https://weberc2.github.io/feed.atom">Atom Feed</a></li>
                 </ul>
             </div>
             
