--- a/1.html
+++ b/1.html
@@ -153,7 +153,7 @@ a few examples that will (<em>hopefully</em>) demonstrate this clearly:</p>
                     <p>Sometimes I&rsquo;m curious about the performance of different languages. At work, I
 usually write Python, but I often find tasks that are inherently parallelizable
 and could thus benefit from parallel execution. Unfortunately, Python is
-notoriously difficult to parallelize<sup class="footnote-ref" id="fnref:posts/benchmarking-go-and-python.htmla"><a rel="footnote" href="#fn:posts/benchmarking-go-and-python.htmla">1</a></sup>. In one case, we needed to validate
+notoriously difficult to parallelize<sup class="footnote-ref" id="fnref:posts/benchmarking-go-and-python.htmla"><a href="#fn:posts/benchmarking-go-and-python.htmla">1</a></sup>. In one case, we needed to validate
 that a table of values of a particular type could be convertible into a values
 of a different type based on some known set of conversion rules. Since Go is a
 great language for writing concurrent programs (and executing them in
